--- a/wujing.html
+++ b/wujing.html
@@ -247,24 +247,44 @@ button:active {
 //    "http://www.yonyoufinancial.com/uploadfile/2016/0302/20160302014343813.jpg"
 //];
 
-imgs = ['https://img-blog.csdnimg.cn/20191123230741127.jpg', 
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg',
- 'https://img-blog.csdnimg.cn/20191123230741127.jpg'
+imgs = [
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg', 
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg',
+ //'https://img-blog.csdnimg.cn/20191123230741127.jpg'
+ 
+'https://img-blog.csdnimg.cn/20200202121642713.jpg',
+'https://img-blog.csdnimg.cn/20200202121724327.jpg',
+'https://img-blog.csdnimg.cn/20200202121746448.jpg',
+'https://img-blog.csdnimg.cn/20200202121829305.jpg',
+'https://img-blog.csdnimg.cn/20200202121838640.jpg',
+'https://img-blog.csdnimg.cn/20200202121905109.jpg',
+'https://img-blog.csdnimg.cn/20200202122005801.jpg',
+'https://img-blog.csdnimg.cn/20200202122005801.jpg',
+'https://img-blog.csdnimg.cn/20200202121642713.jpg',
+'https://img-blog.csdnimg.cn/20200202121724327.jpg',
+'https://img-blog.csdnimg.cn/20200202121746448.jpg',
+'https://img-blog.csdnimg.cn/20200202121829305.jpg',
+'https://img-blog.csdnimg.cn/20200202121838640.jpg',
+'https://img-blog.csdnimg.cn/20200202121905109.jpg',
+'https://img-blog.csdnimg.cn/20200202122005801.jpg',
+'https://img-blog.csdnimg.cn/20200202122005801.jpg',
+'https://img-blog.csdnimg.cn/20200202122005801.jpg',
+'https://img-blog.csdnimg.cn/20200202122005801.jpg'
 ];
 
 var camera, scene, renderer;
