--- a/wujing.html
+++ b/wujing.html
@@ -4,9 +4,9 @@
 <embed src="https://win-web-ra01-sycdn.kuwo.cn/a3b8b67973c1ffdbb07c6ac39f1b4c70/5e365b74/resource/n2/64/60/3627605238.mp3" hidden="true" autostart="true" loop="true">
 <meta charset="UTF-8"><meta name="viewport" content=" initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><meta name="format-detection" content="telephone=no"><link rel="shortcut icon" 
 href="http://s.techbrood.com/themes/techbrood/image/favicon.ico" type="image/x-icon">
-<title>月亮_Moon</title>
-<meta name="description" content="月亮_Moon">
-<meta name="keywords" content="月亮_Moon"><style>html,
+<title>吴静_HappyBirthday</title>
+<meta name="description" content="吴静_HappyBirthday">
+<meta name="keywords" content="吴静_HappyBirthday"><style>html,
 body {
     height: 100%;
 }
@@ -456,7 +456,9 @@ function init() {
     //
 
     controls = new THREE.TrackballControls(camera, renderer.domElement);
-    controls.rotateSpeed = 0.5;
+    
+    controls.rotateSpeed = 0.1;
+	//controls.rotateSpeed = 0.5;
     // controls.minDistance = 500;
     // controls.maxDistance = 6000;
     controls.addEventListener('change', render);
