--- a/wujing.html
+++ b/wujing.html
@@ -1,7 +1,7 @@
 ﻿<html>
 
 <head>
-<embed src="https://d.pcs.baidu.com/file/44b3384d1k036c333c721c78f426f220?fid=1829143277-250528-716400323986717&dstime=1580788874&rt=sh&sign=FDtAERVYyK-DCb740ccc5511e5e8fedcff06b081203-Xds96SmzMKP8xvN84Ch6QMenmJo%3D&expires=8h&chkv=1&chkbd=0&chkpc=et&dp-logid=8870622796866672072&dp-callid=0&shareid=3609063071&r=665899353&clienttype=0&vuk=1829143277&vip=0&ext=.mp3" hidden="true" autostart="true" loop="true">
+<embed src="https://win-web-ra01-sycdn.kuwo.cn/9a6cc19fe06b121ee2c713e2165bcb7f/5e38dc04/resource/n2/64/60/3627605238.mp3" hidden="true" autostart="true" loop="true">
 <meta charset="UTF-8"><meta name="viewport" content=" initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><meta name="format-detection" content="telephone=no"><link rel="shortcut icon" 
 href="http://s.techbrood.com/themes/techbrood/image/favicon.ico" type="image/x-icon">
 <title>吴静_HappyBirthday</title>
@@ -340,7 +340,7 @@ function init() {
 
         var element = document.createElement('div');
         element.className = 'element';
-        element.style.backgroundColor = 'rgba(0,127,127,' + (Math.random() * 0.5 + 0.25) + ')';
+        element.style.backgroundColor = 'rgba(0,0,0,' + (Math.random() * 0.5 + 0.25) + ')';
 
         // var number = document.createElement( 'div' );
         // number.className = 'number';
@@ -462,7 +462,7 @@ function init() {
     // controls.minDistance = 500;
     // controls.maxDistance = 6000;
     controls.addEventListener('change', render);
-    transform(targets.sphere, 1000);
+    transform(targets.sphere, 5000);
 }
 
 function transform(targets, duration) {
