--- a/wujing.html
+++ b/wujing.html
@@ -1,7 +1,7 @@
 ﻿<html>
 
 <head>
-<embed src="https://win-web-ra01-sycdn.kuwo.cn/9a6cc19fe06b121ee2c713e2165bcb7f/5e38dc04/resource/n2/64/60/3627605238.mp3" hidden="true" autostart="true" loop="true">
+<embed src="https://sharefs.yun.kugou.com/202002041457/91b3e27ec932b5ebb0bf477bd5061144/G001/M09/0A/01/oYYBAFS5kL2AOFWLAD3YAR31ppk542.mp3" hidden="true" autostart="true" loop="true">
 <meta charset="UTF-8"><meta name="viewport" content=" initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><meta name="format-detection" content="telephone=no"><link rel="shortcut icon" 
 href="http://s.techbrood.com/themes/techbrood/image/favicon.ico" type="image/x-icon">
 <title>吴静_HappyBirthday</title>
@@ -462,7 +462,7 @@ function init() {
     // controls.minDistance = 500;
     // controls.maxDistance = 6000;
     controls.addEventListener('change', render);
-    transform(targets.sphere, 5000);
+    transform(targets.sphere, 1000);
 }
 
 function transform(targets, duration) {
