--- a/wujing.html
+++ b/wujing.html
@@ -1,12 +1,12 @@
 ﻿<html>
 
 <head>
-<embed src="https://sharefs.yun.kugou.com/202002041457/91b3e27ec932b5ebb0bf477bd5061144/G001/M09/0A/01/oYYBAFS5kL2AOFWLAD3YAR31ppk542.mp3" hidden="true" autostart="true" loop="true">
+<audio src="https://sharefs.yun.kugou.com/202002041457/91b3e27ec932b5ebb0bf477bd5061144/G001/M09/0A/01/oYYBAFS5kL2AOFWLAD3YAR31ppk542.mp3" hidden="true" autostart="true" loop="true">
 <meta charset="UTF-8"><meta name="viewport" content=" initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><meta name="format-detection" content="telephone=no"><link rel="shortcut icon" 
 href="http://s.techbrood.com/themes/techbrood/image/favicon.ico" type="image/x-icon">
-<title>吴静_HappyBirthday</title>
-<meta name="description" content="吴静_HappyBirthday">
-<meta name="keywords" content="吴静_HappyBirthday"><style>html,
+<title>吴静 Happy Birthday</title>
+<meta name="description" content="吴静_Happy Birthday">
+<meta name="keywords" content="吴静_Happy Birthday"><style>html,
 body {
     height: 100%;
 }
