--- a/lovers/index.html
+++ b/lovers/index.html
@@ -9,6 +9,11 @@
 <title>七夕快乐，纪念认识的第</title><link rel=icon href=https://wx2.sinaimg.cn/mw690/4d227521ly1fcoq8d7jpzj200g00g743.jpg>
 <link href=static/css/app.c40bf2af2aad3f43dfa7220227f71244.css rel=stylesheet></head
 ><body><div id=app></div>
+<!-- <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="./gaobaiqiqiu.mp3"></iframe> -->
+<audio id="backgroundMusic" loop>
+  <source src="./gaobaiqiqiu.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 <script type=text/javascript src=static/js/manifest.c9f1f49002d0487072ac.js></script>
 <script type=text/javascript src=static/js/vendor.b769607e6d594fe4e252.js></script>
 <script type=text/javascript src=static/js/app.dd44f265da874e0d2a25.js></script>
